# animation_problem_minimal

./: .gitignore  Cargo.toml  Readme.md
assets/: Sprite.aseprite  minimal.ldtk
src/: main.rs
